# OM-IDEA

./: README.md  __init__ (1).py  aggregate_mode_prices.py  b_gdppc_impact_on_rpm.py  build_docs  c_aggregate_regional_impact.py  d_operating_costs.py  data_loading.py  dataframe.py  download  e_ticket_price.py  energy_price.py  extrapolate.py  f_ticket_price_impact_on_rpm.py  fleet_growth.py  fleet_level_quantities.py  g_aggregate_delta_rpm.py  generate_coverage_report.cmd  h_rpm_asm.py  i_fleet_evolution_model.py  j_fleet_level_quantities.py  jax_component.py  main.py  market_shares.py  model (1).py  model.py  namespace.py  om_helpers.py  operating_costs.py  options.py  preprocessing.py  price_elasticities.py  pyproject.toml  run_tests.cmd  share_weights.py  sphinx_attrs_metadata.py  strings.py  timeseries.py  transportation_demand.py  transportation_mode_price.py  (+2 more)
