[project]
name = "om-idea"
version = "0.1.0"
description = "Add your description here"
readme = "docs/README.md"
authors = [
    { name = "Raphael Gautier", email = "raphael.gautier@gatech.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "ipykernel>=6.29.5",
    "jax>=0.6.1",
    "jaxlib>=0.6.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openmdao>=3.39.0",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "plotly>=6.3.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1"
]

[project.scripts]
# om-idea = "om_idea:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["om_idea"]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "pytest>=8.4.1",
    "pydeps>=3.0.1"
]

docs = [
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-inline-tabs>=2025.12.21.14",
    "sphinx-toolbox>=4.1.2",
    "myst-nb>=1.3.0",
    "myst-parser>=4.0.1",
    "furo>=2025.12.19"
]

[tool.coverage.run]
source = ["om_idea/"]

[tool.pydeps]
only     = "om_idea"
rmprefix = "om_idea."

[tool.ruff]
line-length = 88
